# pendulum-simulator

./: meson.build
pendulum/: abstract.h  main.cpp  main.h  meson.build  simple.cpp  simple.h
pendulum/proto/: pendulum.proto
